//
// Created by lucas on 30/08/2024.
//

#ifndef ROLE_H
#define ROLE_H

#include "Phoenixpp/ai/stp/Tactic.h"

namespace phoenixpp::ai {

    class Role {
        Tactic tactics[10]; // TODO: alterar esse size para ficar dinamico

    };
}

#endif //ROLE_H
