@startuml teste
class Robot {

}

class Skill {

}

class Tactic {
    StateMachine<State, Skill> stateMachine
}

class Role {
    StateMachine<State, Tactic> stateMachine
}

class Play {
    vector<Role> roles
}

class PlayLibrary {
    vector<Play> allPlays
    void cadastrarPlay(Play play)
}

class RoleAssigner {
    Play actualPlay
    void assignRoles(Play play)
}

class PlaySelection {
    vector<Play> allPlays
    Play actualPlay
    bool shouldUpdatePlay(FieldState fieldState)
    vector<<Play>> selectPlays(FieldState fieldState)
}

class FieldState {
    vector<Ball> balls
    vector<Robot> blueRobots
    vector<Robot> yellowRobots
    FieldGeometry fieldGeometry
}

interface ITeam {
    vector<Robot> robot
}

class OurTeam implements ITeam {
    enum color
}

PlayLibrary "1" --o "*" Play
PlaySelection -- FieldState
PlaySelection -- RoleAssigner
PlaySelection -- PlayLibrary
RoleAssigner -- OurTeam
Skill "1..*" o-- "1" Tactic
Tactic "1..*" o-- "1" Role
Role "1..*" o-- "1" Play

note "Each Play, Role, Tactic and Skill implements\nIPlay, IRole, ITactic and ISkill" as N1
note top of PlaySelection: Queremos selecionar ao mesmo\n tempo uma ou mais plays?
@enduml